# affinityRouter

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: arch_direct.d2  arch_indirect.d2  architecture.md  configuration.md  getting_started.md
src/affinity_router/: __init__.py
src/affinity_router/core/: __init__.py  exceptions.py  hash_ring.py  types.py
src/affinity_router/registry/: __init__.py  base.py  redis.py
src/affinity_router/router/: __init__.py  router.py
src/affinity_router/state/: __init__.py  base.py  redis.py
src/affinity_router/transport/: __init__.py  base.py  batched_tcp.py  redis.py  tcp.py
src/affinity_router/worker/: __init__.py  cache.py  worker.py
tests/: conftest.py
tests/integration/: test_redis_registry.py  test_redis_state.py  test_redis_transport.py
tests/unit/: test_cache.py  test_hash_ring.py  test_router.py  test_types.py  test_worker.py
