[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affinity-router"
version = "0.1.0a1"
description = "Intelligent task routing with data locality for distributed systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AffinityRouter Contributors" },
]
keywords = [
    "routing",
    "distributed-systems",
    "consistent-hashing",
    "data-locality",
    "task-queue",
    "load-balancer",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "redis[hiredis]>=5.0",
]

[project.optional-dependencies]
# Future transport adapters
# grpc = ["grpcio>=1.60"]
# nats = ["nats-py>=2.6"]

[project.urls]
Homepage = "https://github.com/marcbadiam/affinityRouter"
Repository = "https://github.com/marcbadiam/affinityRouter"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.6",
    "fakeredis[lua]>=2.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/affinity_router"]

# === Ruff ===
[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "UP007",  # Use X | Y for Union — keep Optional for 3.10 readability
]

[tool.ruff.lint.isort]
known-first-party = ["affinity_router"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S",     # Security checks not needed in tests
]

# === Mypy ===
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "fakeredis.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "redis.*"
ignore_missing_imports = true

# === Pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring a running Redis instance",
]
